# rdfless

./: .dockerignore  .output.txt  CHANGELOG.md  CICD_SETUP.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  PAGER_KEYBINDINGS.md  README.md  doap.ttl  install.sh  justfile  sample.trig  sample.ttl
.cargo/: config.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
man/: README.md  rdfless-config.5  rdfless.1
samples/: sample.nq  sample.nt  sample.provn  sample.trig
scripts/: README.md  generate-config-example.sh  terminal_screenshot.py  update_screenshots.py
src/: config.rs  filter.rs  lib.rs  main.rs  pager.rs  types.rs  utils.rs
src/formatter/: compact.rs  expanded.rs  mod.rs  writer.rs
src/parser/: common.rs  mod.rs  nquads.rs  ntriples.rs  provn.rs  robust.rs  trig.rs  turtle.rs
tests/: config_test.rs  filter_integration_test.rs  formatter_test.rs  parser_test.rs  prefix_integration_test.rs  prefix_test.rs  process_test.rs  provn_test.rs  rdf12_test.rs  rdf_star_test.rs  robust_parser_test.rs
tests/fixtures/: test_at_version_directive.ttl  test_comments.ttl  test_comprehensive.ttl  test_error.ttl  test_malformed.ttl  test_malformed_ntriples.nt  test_mixed_valid.ttl  test_ntriples.nt  test_rdfstar.ttl  test_rdfstar_object.ttl  test_simple_rdfstar.ttl  test_undefined_prefix.ttl  test_version_directive.ttl
