[package]
name = "rdfless"
version = "0.1.3"
edition = "2021"
description = "A colorful TTL (Turtle) pretty printer for RDF data with ANSI colors"
authors = ["Lars Wilhelmsen"]
license = "BSD-3-Clause"
repository = "https://github.com/larsw/rdfless"
readme = "README.md"
keywords = ["rdf", "turtle", "ttl", "pretty-printer", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
rio_api = "0.8.5"
rio_turtle = "0.8.5"
colored = "3.0.0"
clap = { version = "4.5.39", features = ["derive"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.32"
dirs = "6.0.0"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.20.0"
