[package]
name = "rdfless"
version = "0.2.14"
edition = "2021"
description = "A colorful pretty printer for RDF (Turtle/TriG/N-Triples/N-Quads) with ANSI colors"
authors = ["Lars Wilhelmsen"]
license = "BSD-3-Clause"
repository = "https://github.com/larsw/rdfless"
readme = "README.md"
keywords = ["rdf", "turtle", "ntriples", "nquads", "pretty-printer"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
oxttl = { version = "0.1.8", features = ["rdf-star"] }
oxrdf = { version = "0.2.4", features = ["rdf-star"] }
colored = "3.0.0"
clap = { version = "4.5.41", features = ["derive"] }
clap_complete = "4.5.55"
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.0"
dirs = "6.0.0"
minus = { version = "5.6.1", features = ["search", "static_output"] }
terminal_size = "0.4.2"
termbg = "0.6.2"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.20.0"

[profile.release]
strip = "debuginfo"
debug = "none"

[package.metadata.deb]
maintainer = "Lars Wilhelmsen"
copyright = "2025, Lars Wilhelmsen <lars@wilhelmsen.org>"
license-file = ["LICENSE", "4"]
extended-description = """\
A command-line tool for pretty-printing RDF data with syntax highlighting.
Supports Turtle, TriG, N-Triples, and N-Quads formats with configurable
color schemes and automatic pagination for large outputs."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/rdfless", "usr/bin/", "755"],
    ["man/rdfless.1", "usr/share/man/man1/", "644"],
    ["man/rdfless-config.5", "usr/share/man/man5/", "644"],
    ["README.md", "usr/share/doc/rdfless/", "644"],
]
